--- a/public/assets/admin/css/style.bundle.css
+++ b/public/assets/admin/css/style.bundle.css
@@ -8676,7 +8676,6 @@ a.text-dark:hover, a.text-dark:focus {
 label.btn,
 input.btn,
 button.btn {
-    width: 100%;
   cursor: pointer; }
 
 .btn.btn-clean {
@@ -23505,7 +23504,7 @@ strong {
 
 @media (min-width: 1025px) {
   .kt-form.kt-form--label-right .form-group label:not(.kt-checkbox):not(.kt-radio):not(.kt-option) {
-    text-align: right; } }
+  } }
 
 .kt-input-icon {
   position: relative;
