--- a/public/assets/admin/css/wizard/wizard.css
+++ b/public/assets/admin/css/wizard/wizard.css
@@ -1,4 +1,3 @@
-
 .image-container {
     min-height: 100vh;
     background-position: center center;
@@ -80,10 +79,6 @@
     color: rgba(255, 255, 255, 0.9);
 }
 
-.wizard-container {
-    padding-top: 100px;
-    z-index: 3;
-}
 .wizard-container .wizard-navigation {
     position: relative;
 }
@@ -407,6 +402,7 @@ h2.title {
 }
 .wizard-card .nav-pills > li {
     text-align: center;
+    padding: 10px;
 }
 .wizard-card .btn {
     text-transform: uppercase;
@@ -866,8 +862,9 @@ label.control-label {
 .form-group label {
     font-size: 14px;
     line-height: 1.42857;
-    color: #AAAAAA;
-    font-weight: 400;
+    color: #757171;
+    font-weight: bold;
+    font-family: inherit;
 }
 .form-group label.control-label {
     font-size: 11px;
@@ -2272,5 +2269,107 @@ body{
     .navbar .navbar-nav > li > a {
         padding-top: 15px;
         padding-bottom: 15px;
+    }
+}
+
+footer {
+    padding: 15px 0;
+    text-align: center;
+
+}
+.footer a{
+    font-weight: bold;
+}
+
+footer.footer-documentation{
+    margin-top: 0;
+    bottom: 0;
+    text-shadow: none;
+    color: inherit;
+}
+
+footer.footer-documentation li a{
+    color: inherit;
+}
+
+footer.footer-documentation li a:hover,
+footer.footer-documentation li a:focus{
+    color: #89229b;
+}
+
+footer ul {
+    margin-bottom: 0;
+    padding: 0;
+    list-style: none;
+}
+footer ul li {
+    display: inline-block;
+}
+footer ul li a {
+    color: inherit;
+    padding: 15px;
+    font-weight: 500;
+    font-size: 12px;
+    text-transform: uppercase;
+    border-radius: 3px;
+    text-decoration: none;
+    position: relative;
+    display: block;
+}
+footer ul li a:hover {
+    text-decoration: none;
+}
+footer ul li .btn {
+    margin: 0;
+}
+footer ul.links-horizontal:first-child a {
+    padding-left: 0;
+}
+footer ul.links-horizontal:last-child a {
+    padding-right: 0;
+}
+footer ul.links-vertical li {
+    display: block;
+}
+footer ul.links-vertical li a {
+    padding: 5px 0;
+}
+footer .social-buttons a,
+footer .social-buttons .btn {
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+footer .footer-brand {
+    float: left;
+    height: 50px;
+    padding: 15px 15px;
+    font-size: 18px;
+    line-height: 20px;
+    margin-left: -15px;
+}
+footer .footer-brand:hover, footer .footer-brand:focus {
+    color: #3C4858;
+}
+footer .copyright {
+    padding: 15px 0;
+    text-align: center;
+}
+footer .copyright .material-icons {
+    font-size: 18px;
+    position: relative;
+    top: 3px;
+}
+footer .pull-center {
+    display: inline-block;
+    float: none;
+}
+
+@media (max-width: 768px) {
+    .footer .copyright {
+        display: inline-block;
+        text-align: center;
+        padding: 10px 0;
+        float: none !important;
+        width: 100%;
     }
 }
