--- a/public/assets/admin/css/pages/login/login-2.css
+++ b/public/assets/admin/css/pages/login/login-2.css
@@ -12,7 +12,11 @@
 .kt-login.kt-login--v2 .kt-login__wrapper .kt-login__container {
     width: 430px;
     margin: 0 auto;
+    background: #fff;
+    padding: 25px;
 }
+
+
 
 .kt-login.kt-login--v2 .kt-login__wrapper .kt-login__container .kt-login__logo {
     text-align: center;
@@ -39,7 +43,7 @@
 }
 
 .kt-login.kt-login--v2 .kt-login__wrapper .kt-login__container .kt-form {
-    margin: 4rem auto;
+    margin: 2rem auto;
 }
 
 .kt-login.kt-login--v2 .kt-login__wrapper .kt-login__container .kt-form .input-group {
@@ -48,14 +52,19 @@
 }
 
 .kt-login.kt-login--v2 .kt-login__wrapper .kt-login__container .kt-form .form-control {
-    height: 46px;
-    border-radius: 46px;
-    border: none;
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
-    margin-top: 1.5rem;
-    background: white;
-    color: black;
+    display: block;
+    width: 100%;
+    height: calc(2.25rem + 2px);
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
 }
 
 .kt-login.kt-login--v2 .kt-login__wrapper .kt-login__container .kt-form input.form-control {
@@ -96,6 +105,13 @@
     color: rgba(255, 255, 255, 0.6);
     font-size: 1rem;
 }
+
+img {
+    width: 60%;
+    text-align: center;
+    margin: auto;
+}
+
 
 .kt-login.kt-login--v2 .kt-login__wrapper .kt-login__container .kt-form .kt-login__extra .kt-checkbox {
     font-size: 1rem;
