--- a/public/assets/admin/css/pages/login/login-2.rtl.css
+++ b/public/assets/admin/css/pages/login/login-2.rtl.css
@@ -12,6 +12,8 @@
 .kt-login.kt-login--v2 .kt-login__wrapper .kt-login__container {
     width: 430px;
     margin: 0 auto;
+    background: #fff;
+    padding: 25px;
 }
 
 .kt-login.kt-login--v2 .kt-login__wrapper .kt-login__container .kt-login__logo {
