--- a/public/assets/admin/css/style.bundle.css
+++ b/public/assets/admin/css/style.bundle.css
@@ -453,7 +453,7 @@ pre code {
     padding-right: 10px;
     padding-left: 10px;
     margin-right: auto;
-    margin-left: auto; }
+     }
 @media (min-width: 576px) {
     .container {
         max-width: 540px; } }
